--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@ body
 <ol>
 <li><a href="HW0/index.html">Digital Assignment 1</a></li>
 </ol>
-
+<ol>
+<li><a href="HW0">Digital Assignment 1</a></li>
+</ol>
 
 <p>Here are the templates:
 
