--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ body
 
 <ol>
 <li><a href="HW0/index.html">Digital Assignment 1</a></li>
+<li><a href="HW1/index.html">Digital Assignment 2</a></li>
 </ol>
 
 <p>Here are the templates:
