--- a/HW1/index.html
+++ b/HW1/index.html
@@ -22,72 +22,87 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Your game title</h2>
+<h2>StarRunner</h2>
 
 <ul>
 <li><strong>Originality:</strong>
-What is original about your game?
+The originality of my game is how I utilize two players and make them compete for getting the greatest number
+of stars. 
+amount of stars 
 </li>
 
 <li><strong>Technical Merit:</strong>
-What is interesting about your game technology?
+What is interesting about my game technology is that I added an additional set of controls to the game
+using the keyboard inputs. This, atleast for me was a challenge because I am unfamiliar with phaser. 
+In addition, I was able to set up a second score and have the game play fluidly.
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
 What did you learn from this prototype?
-What was the easiest or hardest part of making it?
+I learned alot from this prototype. I learned how to create editied sprites, images, and audio files. One of the hardest (for me) though was the setting up of keyboard controls. Because I am unfamiliar with phaser,  I had to search for an example of this. I am not an "avid gamer," but making this first game was actually fun.  
 </li>
 
 <li><strong>Prototype Assets:</strong>
 Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
+I editied multiple previous examples. They are listed below:
+	- Audio: - Richard Wagner: Ride of the Valkyries (https://www.musikery.com/mp3/167c062d13d3d699c5db57879f5c6c6e55c1a75d6cd599771cf8ed06dd516e97.mp3)
+			 - You Lose sound effect (http://www.orangefreesounds.com/you-lose-sound-effect/)
 <ul>
-<li>Bouncing Phaser image: <a href="https://phaser.io/download/logo">Phaser logo</a></li>
+<li>Main adaption from: <a href="http://phaser.io/tutorials/making-your-first-phaser-3-game/part1">Phaser examples</a></li>
 </ul>
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
-Which other game most closely resembles your game? If you are borrowing code from a Phaser Example, you must say so here. If you borrow code from elsewhere, you must say so here.
+<ul>
+<li>Main adaption from: <a href="http://phaser.io/tutorials/making-your-first-phaser-3-game/part1">Phaser examples</a></li>
+</ul>
+<li>Richard Wagner: Ride of the Valkyries: <a href="https://www.musikery.com/mp3/167c062d13d3d699c5db57879f5c6c6e55c1a75d6cd599771cf8ed06dd516e97.mp3">Ride of Valkyries</a></li>
+</ul>
+<li>You Lose sound effect: <a href="http://www.orangefreesounds.com/you-lose-sound-effect/">You Lose sound effect</a></li>
+</ul>
 </li>
 
 <li><strong>High Concept:</strong>
-A one-sentence summary of your game.
+Catch as many stars as fast as you can without dying.
 </li>
 
 <li><strong>Theme:</strong>
-State which of the Storymatic themes you used.
+I used the same storymatic example from phaser but edited the game to have a twist.
 </li>
 
 <li><strong>Mandated Variety:</strong>
-State which input, randomness, genre, and play style you used in this prototype.
+I used a different control set as the main input of the game from the arrows. This allowed a two player game to developed so it was now a mulitplayer game. The randomeness introduced in the game was from the physics of the ball that killed the players. Perhaps in a future version I will make it so the players can interact with one another.
 </li>
 
 <li><strong>Prototype Goal:</strong>
-What game mechanic is this prototype evaluating?
+The game mechanic is this prototype evaluating is the kinesthetics of the game. 
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-What experience do you want players to have when playing your game?
+I want my players to experience exitment that they have to play one another. 
 </li>
 
 <li><strong>Gameplay:</strong>
-A paragraph describing the actions the player can perform, the system dynamics, and the core mechanic. Include a concise explanation of the prototype’s inputs and their expected effects (how to play). You can also describe game play that is not in the prototype. You may include mock-up images for parts of the game not in the prototype.
+The actions that my players can perform are running and jumping. Another action would be that they are to avoid the bombs. The game does not end until someone hits a bomb. Essentially in the beginning, the Players start next to eachother. Then they can begin to play the game by competing for the highest amount of stars. They can jump on platforms and move around the game fluidly.
 </li>
 
 <li><strong>Strategies:</strong>
-What player strategies do you expect will be effective at playing this game?
+A player strategy I would expect is that they may try to win by force, although it could be contrued as "cheating," it adds a twist to the game. Another strategy that I would expect to see is that because the players closely resemble eachother, they can run fast near their opponent to try to confuse them.
 </li>
 
 <li><strong>Story/Setting/Premise:</strong>
 A paragraph about the world your game is set in and who the characters are. What makes the game world and its occupants unique and interesting? Do the tokens represent something? If the game has a backstory, mention it here. If the game is abstract, then say so.
 How will the dramatic tension interact with the gameplay tension?
+
+The world my game is set in is a cave. I think it's interesting because the example that I used was in the sky with platforms. It turns the old example on its head does the opposite. One characteristic I would purse in future games would be to have the bombs come in from the side or from the bottom. The game does not really have a backstory. It is just meant to be a fun entertaing game.
 </li>
 
 <li><strong>Target Audience:</strong>
-A single sentence that describes the demographic you're trying to reach.
+The target audience I am trying to reach is pretty much anyone that wants to have fun. The audience is of all ages.
 </li>
 
 <li><strong>Play Time:</strong>
-How long does your game take to play?
+My play time is "technically" infinite, although after 3 bombs are in there, it gets really hard for the game to go on that long. I see players playing the game multiple times. I would estimate about 2 minutes for an intense game. 
 </li>
 
 </ul>
