--- a/HW1/index.html
+++ b/HW1/index.html
@@ -34,12 +34,12 @@ amount of stars
 <li><strong>Technical Merit:</strong>
 What is interesting about my game technology is that I added an additional set of controls to the game
 using the keyboard inputs. This, atleast for me was a challenge because I am unfamiliar with phaser. 
-In addition, I was able to set up a second score and have the game play fluidly.
+In addition, I was able to set up a second score and have the game play fluidly. NOTE: The controls to move player 2 is by using the "A" jey for left movement, "W" Key for bounce movement, and the "D" key for right movement.
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
 What did you learn from this prototype?
-I learned alot from this prototype. I learned how to create editied sprites, images, and audio files. One of the hardest (for me) though was the setting up of keyboard controls. Because I am unfamiliar with phaser,  I had to search for an example of this. I am not an "avid gamer," but making this first game was actually fun.  
+I learned alot from this prototype. I learned how to create editied sprites, images, and audio files. One of the hardest (for me) though was the setting up of keyboard controls. Another challenge I faced was that the audio file did not want to restart playing again in my browser upon refresh. Because I am unfamiliar with phaser,  I had to search for an example of this. I am not an "avid gamer," but making this first game was actually fun. 
 </li>
 
 <li><strong>Prototype Assets:</strong>
