--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ body
 <ol>
 <li><a href="HW0/index.html">Digital Assignment 0</a></li>
 <li><a href="HW1/index.html">Digital Assignment 1</a></li>
+<li><a href="">Digital Assignment 2 - PASS</a></li>
 </ol>
 
 <p>Here are the templates:
