--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ body
 <li><a href="HW0/index.html">Digital Assignment 0</a></li>
 <li><a href="HW1/index.html">Digital Assignment 1</a></li>
 <li><a href="">Digital Assignment 2 - PASS</a></li>
+<li><a href="HW3/index.html">Digital Assignment 3</a></li>
 </ol>
 
 <p>Here are the templates:
