--- a/HW3/index.html
+++ b/HW3/index.html
@@ -22,24 +22,20 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>StarRunner</h2>
+<h2>CatchACat</h2>
 
 <ul>
 <li><strong>Originality:</strong>
-The originality of my game is how I utilize two players and make them compete for getting the greatest number
-of stars. 
-amount of stars 
+The originality of my game is how I utilize a dog that can kill the player AND the cats you are trying to catch! This makes it harder to get a perfect score of 10.
 </li>
 
 <li><strong>Technical Merit:</strong>
-What is interesting about my game technology is that I added an additional set of controls to the game
-using the keyboard inputs. This, atleast for me was a challenge because I am unfamiliar with phaser. 
-In addition, I was able to set up a second score and have the game play fluidly. NOTE: The controls to move player 2 is by using the "A" jey for left movement, "W" Key for bounce movement, and the "D" key for right movement.
+What is interesting about my game technology is that I got the two images to interact with another (the Cats and the Dog). I also messed around with the Random Generator function to drop in the cats at random places on the map.
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
 What did you learn from this prototype?
-I learned alot from this prototype. I learned how to create editied sprites, images, and audio files. One of the hardest (for me) though was the setting up of keyboard controls. Another challenge I faced was that the audio file did not want to restart playing again in my browser upon refresh. Because I am unfamiliar with phaser,  I had to search for an example of this. I am not an "avid gamer," but making this first game was actually fun. 
+I learned alot from this prototype. I learned how to create editied sprites, images, and audio files. One of the hardest things for me though was to get my syntax right. Although some of it was adapted from a previous model, I am still learning phaser at this point.
 </li>
 
 <li><strong>Prototype Assets:</strong>
@@ -48,53 +44,58 @@ I editied multiple previous examples. They are listed below:
 	- Audio: - Richard Wagner: Ride of the Valkyries (https://www.musikery.com/mp3/167c062d13d3d699c5db57879f5c6c6e55c1a75d6cd599771cf8ed06dd516e97.mp3)
 			 - You Lose sound effect (http://www.orangefreesounds.com/you-lose-sound-effect/)
 <ul>
-<li>Main adaption from: <a href="http://phaser.io/tutorials/making-your-first-phaser-3-game/part1">Phaser examples</a></li>
+<li> Some code borrowed from: <a href="http://phaser.io/tutorials/making-your-first-phaser-3-game/part1">Phaser examples</a></li>
 </ul>
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
 <ul>
-<li>Main adaption from: <a href="http://phaser.io/tutorials/making-your-first-phaser-3-game/part1">Phaser examples</a></li>
+<li>Adaption from: <a href="http://phaser.io/tutorials/making-your-first-phaser-3-game/part1">Phaser examples</a></li>
 </ul>
 <li>Richard Wagner: Ride of the Valkyries: <a href="https://www.musikery.com/mp3/167c062d13d3d699c5db57879f5c6c6e55c1a75d6cd599771cf8ed06dd516e97.mp3">Ride of Valkyries</a></li>
 </ul>
 <li>You Lose sound effect: <a href="http://www.orangefreesounds.com/you-lose-sound-effect/">You Lose sound effect</a></li>
 </ul>
+<li>Dog Image: <a href="https://gallery.yopriceville.com/Free-Clipart-Pictures/Cartoons-PNG/Dog_Cartoon_PNG_Clip_Art_Image">You Lose sound effect</a></li>
+</ul>
+<li>Cat Image: <a href="https://www.vectorstock.com/royalty-free-vector/gray-cat-kitten-cute-cartoon-character-kawaii-vector-19227395">You Lose sound effect</a></li>
+</ul>
 </li>
 
 <li><strong>High Concept:</strong>
-Catch as many stars as fast as you can without dying.
+Catch as many cats as you can without dying.
 </li>
 
 <li><strong>Theme:</strong>
-I used the same storymatic example from phaser but edited the game to have a twist.
+I used the "A person with lots of cats" storymatic theme for this project as required by class.
 </li>
 
 <li><strong>Mandated Variety:</strong>
-I used a different control set as the main input of the game from the arrows. This allowed a two player game to developed so it was now a mulitplayer game. The randomeness introduced in the game was from the physics of the ball that killed the players. Perhaps in a future version I will make it so the players can interact with one another.
+I used a lot of randomness, direct input, collector varieties for my game.
 </li>
 
 <li><strong>Prototype Goal:</strong>
-The game mechanic is this prototype evaluating is the kinesthetics of the game. 
+The game mechanic this prototype evaluating is the kinesthetics of the game. 
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-I want my players to experience exitment that they have to play one another. 
+I want my players to experience exitment that they have to try to catch something that can also die from a dog.
 </li>
 
 <li><strong>Gameplay:</strong>
-The actions that my players can perform are running and jumping. Another action would be that they are to avoid the bombs. The game does not end until someone hits a bomb. Essentially in the beginning, the Players start next to eachother. Then they can begin to play the game by competing for the highest amount of stars. They can jump on platforms and move around the game fluidly.
+The actions that my players can perform are running and making sure that an extrapolated path of travel by a bad dog is not in the players current path while catching loose cats.
 </li>
 
 <li><strong>Strategies:</strong>
-A player strategy I would expect is that they may try to win by force, although it could be contrued as "cheating," it adds a twist to the game. Another strategy that I would expect to see is that because the players closely resemble eachother, they can run fast near their opponent to try to confuse them.
+A player strategy I would expect to see is "hiding" from the dog with the structures within the game. Another stategy I could see from players would be that they would simply camp out in a structure and wait for the dog to pass rather than continuing to run around.
 </li>
 
 <li><strong>Story/Setting/Premise:</strong>
 A paragraph about the world your game is set in and who the characters are. What makes the game world and its occupants unique and interesting? Do the tokens represent something? If the game has a backstory, mention it here. If the game is abstract, then say so.
 How will the dramatic tension interact with the gameplay tension?
 
-The world my game is set in is a cave. I think it's interesting because the example that I used was in the sky with platforms. It turns the old example on its head does the opposite. One characteristic I would purse in future games would be to have the bombs come in from the side or from the bottom. The game does not really have a backstory. It is just meant to be a fun entertaing game.
+
+The world my game is set in is a house. I think its interesting because the premise of the game is to catch as many loose cats as possible before either the player dies, or the cats die. This game can be fun because it is really challenging to get all 10 cats. This game is meant to be a "perfectionists" game who likes a challenge because this game is hard.
 </li>
 
 <li><strong>Target Audience:</strong>
@@ -102,7 +103,7 @@ The target audience I am trying to reach is pretty much anyone that wants to hav
 </li>
 
 <li><strong>Play Time:</strong>
-My play time is "technically" infinite, although after 3 bombs are in there, it gets really hard for the game to go on that long. I see players playing the game multiple times. I would estimate about 2 minutes for an intense game. 
+My play time is meant to be played in about a minute. Its a quick, fast, fun, game.
 </li>
 
 </ul>
