--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ body
 <li><a href="HW1/index.html">Digital Assignment 1</a></li>
 <li><a href="">Digital Assignment 2 - PASS</a></li>
 <li><a href="HW3/index.html">Digital Assignment 3</a></li>
+<li><a href="HW4/index.html">Digital Assignment 4</a></li>
 </ol>
 
 <p>Here are the templates:
