--- a/HW4/index.html
+++ b/HW4/index.html
@@ -26,29 +26,23 @@ body
 
 <ul>
 <li><strong>Originality:</strong>
-The originality of my game is how I utilize two players and make them compete for getting the greatest number
-of stars. 
-amount of stars 
+The originality of my game is primarily the theme. It is uses the Revenge and Chicken storymatic theme for this week. I ended up going back and forth on what exactly I wanted to create, and decided that I would go for a similar yet different game. From the cows, you can see they say "Eat Mor Chiken," (yes the Chick-Fil-a cows), and the premise of the game is that the chicken is mad about the cows alwas pushing to eat him. So, in order to seek the revenge, the Chicken tries to kill the cows so he can say "Eat Mor Cows!"
 </li>
 
 <li><strong>Technical Merit:</strong>
-What is interesting about my game technology is that I added an additional set of controls to the game
-using the keyboard inputs. This, atleast for me was a challenge because I am unfamiliar with phaser. 
-In addition, I was able to set up a second score and have the game play fluidly. NOTE: The controls to move player 2 is by using the "A" jey for left movement, "W" Key for bounce movement, and the "D" key for right movement.
+What is interesting about my game technology is that I did a shooting game for the first time. It took me a while to fully understand the controls, and how the code worked, but I eventually got it. A cool setting that is implemented into this is that there are only 5 eggs/bullets allowed in the frame at once. This makes it harder to win the game as you cant really mess up all that much or else you will loose the game. 
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
 What did you learn from this prototype?
-I learned alot from this prototype. I learned how to create editied sprites, images, and audio files. One of the hardest (for me) though was the setting up of keyboard controls. Another challenge I faced was that the audio file did not want to restart playing again in my browser upon refresh. Because I am unfamiliar with phaser,  I had to search for an example of this. I am not an "avid gamer," but making this first game was actually fun. 
+I learned alot from this prototype. I learned how to use cursor shooters, how to adjust the physics of my game elements, and how to limit bullets on the screen itself.
 </li>
 
 <li><strong>Prototype Assets:</strong>
 Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
-I editied multiple previous examples. They are listed below:
-	- Audio: - Richard Wagner: Ride of the Valkyries (https://www.musikery.com/mp3/167c062d13d3d699c5db57879f5c6c6e55c1a75d6cd599771cf8ed06dd516e97.mp3)
-			 - You Lose sound effect (http://www.orangefreesounds.com/you-lose-sound-effect/)
+I editied from a few resources. They are listed below:
 <ul>
-<li>Main adaption from: <a href="http://phaser.io/tutorials/making-your-first-phaser-3-game/part1">Phaser examples</a></li>
+<li>Main adaption from: <a href="https://phaser.io/examples/v3/view/physics/arcade/bullets-group">Phaser examples</a></li>
 </ul>
 </li>
 
@@ -56,22 +50,26 @@ I editied multiple previous examples. They are listed below:
 <ul>
 <li>Main adaption from: <a href="http://phaser.io/tutorials/making-your-first-phaser-3-game/part1">Phaser examples</a></li>
 </ul>
-<li>Richard Wagner: Ride of the Valkyries: <a href="https://www.musikery.com/mp3/167c062d13d3d699c5db57879f5c6c6e55c1a75d6cd599771cf8ed06dd516e97.mp3">Ride of Valkyries</a></li>
+<li>Chicken Image<a href="https://www.pinterest.ie/pin/327285097910659122/">Chicken Image</a></li>
 </ul>
-<li>You Lose sound effect: <a href="http://www.orangefreesounds.com/you-lose-sound-effect/">You Lose sound effect</a></li>
+<li>Gun Sound<a href="http://soundbible.com/1855-Gun-Loud.html">Gun Sound</a></li>
 </ul>
-</li>
-
+<li>Cow Sound<a href="http://soundbible.com/1572-Single-Cow.html">Chicken Image</a></li>
+</ul>
+<li>Egg Image<a href="https://pokemon.fandom.com/wiki/Pok%C3%A9mon_Egg">Egg Image</a></li>
+</ul>
+<li>Cow Image<a href="https://thechickenwire.chick-fil-a.com/inside-chick-fil-a/20-years-of-cows">Cow Image</a></li>
+</ul>
 <li><strong>High Concept:</strong>
-Catch as many stars as fast as you can without dying.
+Kill as many cows as you can!
 </li>
 
 <li><strong>Theme:</strong>
-I used the same storymatic example from phaser but edited the game to have a twist.
+I used the storymatic of revenge and chicken. It was a mixture of the two storymatic themes and I based it off of the cow and chicken argument from chick-fila-a.
 </li>
 
 <li><strong>Mandated Variety:</strong>
-I used a different control set as the main input of the game from the arrows. This allowed a two player game to developed so it was now a mulitplayer game. The randomeness introduced in the game was from the physics of the ball that killed the players. Perhaps in a future version I will make it so the players can interact with one another.
+I used a different control set as the main input of the game from the arrows. This allowed me to figure out how cursor following sprites work in the x-orientation. Ano
 </li>
 
 <li><strong>Prototype Goal:</strong>
@@ -79,22 +77,21 @@ The game mechanic is this prototype evaluating is the kinesthetics of the game.
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-I want my players to experience exitment that they have to play one another. 
+I want my players to experience a funny experience as well as obtain better precise motor control.
 </li>
 
 <li><strong>Gameplay:</strong>
-The actions that my players can perform are running and jumping. Another action would be that they are to avoid the bombs. The game does not end until someone hits a bomb. Essentially in the beginning, the Players start next to eachother. Then they can begin to play the game by competing for the highest amount of stars. They can jump on platforms and move around the game fluidly.
+The actions that my players can perform is to move back and forth, as well as shoot at a moving target. 
 </li>
 
 <li><strong>Strategies:</strong>
-A player strategy I would expect is that they may try to win by force, although it could be contrued as "cheating," it adds a twist to the game. Another strategy that I would expect to see is that because the players closely resemble eachother, they can run fast near their opponent to try to confuse them.
-</li>
+A player strategy I would expect is that they may try to click too fastly, this will only hinder the likelihood of winning the game, but it will also not allow one to shoot more than 5 eggs at a time. This makes the game harder so the players will have to think about how they can get the amount of correct shots in the fast amount of time.
 
 <li><strong>Story/Setting/Premise:</strong>
 A paragraph about the world your game is set in and who the characters are. What makes the game world and its occupants unique and interesting? Do the tokens represent something? If the game has a backstory, mention it here. If the game is abstract, then say so.
 How will the dramatic tension interact with the gameplay tension?
 
-The world my game is set in is a cave. I think it's interesting because the example that I used was in the sky with platforms. It turns the old example on its head does the opposite. One characteristic I would purse in future games would be to have the bombs come in from the side or from the bottom. The game does not really have a backstory. It is just meant to be a fun entertaing game.
+The world my game is set in in a field where the chickens and cows may roam. Out in this field, a large battle goes on between the Chickens and the Moo Cows. The Moo Cows are from chick fil a, and they are tired of being eaten at local fast food resturants, so they always push for the chickens to be eaten as a change. So in this story, my chickens are seeking revenge as they want to live too! The dramatic tension will interact with the gameplay tension by making the player want to defend and help the chicken.
 </li>
 
 <li><strong>Target Audience:</strong>
@@ -102,7 +99,7 @@ The target audience I am trying to reach is pretty much anyone that wants to hav
 </li>
 
 <li><strong>Play Time:</strong>
-My play time is "technically" infinite, although after 3 bombs are in there, it gets really hard for the game to go on that long. I see players playing the game multiple times. I would estimate about 2 minutes for an intense game. 
+My play time is around 10 seconds. This is a very fast paced game, the game can be reloaded and played many times quickly. Its a game of skill!
 </li>
 
 </ul>
