--- a/HW4/index.html
+++ b/HW4/index.html
@@ -22,7 +22,7 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>StarRunner</h2>
+<h2>Eat-Mor-Cow</h2>
 
 <ul>
 <li><strong>Originality:</strong>
@@ -45,20 +45,21 @@ I editied from a few resources. They are listed below:
 <li>Main adaption from: <a href="https://phaser.io/examples/v3/view/physics/arcade/bullets-group">Phaser examples</a></li>
 </ul>
 </li>
-
 <li><strong>Prototype Closest Other Game:</strong>
 <ul>
-<li>Main adaption from: <a href="http://phaser.io/tutorials/making-your-first-phaser-3-game/part1">Phaser examples</a></li>
+<li>Main adaption from: <a href="https://phaser.io/examples/v3/view/physics/arcade/bullets-group">Phaser examples</a></li>
 </ul>
-<li>Chicken Image<a href="https://www.pinterest.ie/pin/327285097910659122/">Chicken Image</a></li>
+<li>Chicken Image<a href="https://www.pinterest.ie/pin/327285097910659122/"> here</a></li>
 </ul>
-<li>Gun Sound<a href="http://soundbible.com/1855-Gun-Loud.html">Gun Sound</a></li>
+
+<li>Gun Sound<a href="http://soundbible.com/1855-Gun-Loud.html"> here</a></li>
 </ul>
-<li>Cow Sound<a href="http://soundbible.com/1572-Single-Cow.html">Chicken Image</a></li>
+
+<li>Cow Sound<a href="http://soundbible.com/1572-Single-Cow.html"> here</a></li>
 </ul>
-<li>Egg Image<a href="https://pokemon.fandom.com/wiki/Pok%C3%A9mon_Egg">Egg Image</a></li>
+<li>Egg Image<a href="https://pokemon.fandom.com/wiki/Pok%C3%A9mon_Egg"> here</a></li>
 </ul>
-<li>Cow Image<a href="https://thechickenwire.chick-fil-a.com/inside-chick-fil-a/20-years-of-cows">Cow Image</a></li>
+<li>Cow Image<a href="https://thechickenwire.chick-fil-a.com/inside-chick-fil-a/20-years-of-cows"> here</a></li>
 </ul>
 <li><strong>High Concept:</strong>
 Kill as many cows as you can!
