--- a/HW3/index.html
+++ b/HW3/index.html
@@ -22,27 +22,25 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>CatchACat</h2>
+<h2>Pandemic!</h2>
 
 <ul>
 <li><strong>Originality:</strong>
-The originality of my game is how I utilize a dog that can kill the player AND the cats you are trying to catch! This makes it harder to get a perfect score of 10.
+The originality of my game is how I use the Corona Virus Pandemic as the feature of my game. I have not seen a game similar to this yet. The player simply infects others to dominate the world.
 </li>
 
 <li><strong>Technical Merit:</strong>
-What is interesting about my game technology is that I got the two images to interact with another (the Cats and the Dog). I also messed around with the Random Generator function to drop in the cats at random places on the map.
+What is interesting about my game technology is that I got the non-infected enimies to follow the player sprite and also bounce randomly throughout the game. I also messed around with the Random Generator function to drop in the non-infected players at random places on the map. Moreover, I also figured out how to give all of the sprites "health" so that you dont just infect everyone with a single sneeze, it takes at least three of them.
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
 What did you learn from this prototype?
-I learned alot from this prototype. I learned how to create editied sprites, images, and audio files. One of the hardest things for me though was to get my syntax right. Although some of it was adapted from a previous model, I am still learning phaser at this point.
+I learned alot from this prototype. I learned how to add health or hp to sprites. I also learned how the "follow tool" works. This was really interesting in seeing how the math works. I also learned how to create a custom theme through this prototype. I dont think anything like this is currently in the game market.
 </li>
 
 <li><strong>Prototype Assets:</strong>
 Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
-I editied multiple previous examples. They are listed below:
-	- Audio: - Richard Wagner: Ride of the Valkyries (https://www.musikery.com/mp3/167c062d13d3d699c5db57879f5c6c6e55c1a75d6cd599771cf8ed06dd516e97.mp3)
-			 - You Lose sound effect (http://www.orangefreesounds.com/you-lose-sound-effect/)
+I editied from a previous example with my own code. All borrowed items are listed below:
 <ul>
 <li> Some code borrowed from: <a href="http://phaser.io/tutorials/making-your-first-phaser-3-game/part1">Phaser examples</a></li>
 </ul>
@@ -50,28 +48,26 @@ I editied multiple previous examples. They are listed below:
 
 <li><strong>Prototype Closest Other Game:</strong>
 <ul>
-<li>Adaption from: <a href="http://phaser.io/tutorials/making-your-first-phaser-3-game/part1">Phaser examples</a></li>
+<li>Adaption from: <a href="https://phaser.io/examples/v3/view/games/topdownshooter/topdowncombatmechanics">Phaser examples</a></li>
 </ul>
 <li>Richard Wagner: Ride of the Valkyries: <a href="https://www.musikery.com/mp3/167c062d13d3d699c5db57879f5c6c6e55c1a75d6cd599771cf8ed06dd516e97.mp3">Ride of Valkyries</a></li>
 </ul>
-<li>You Lose sound effect: <a href="http://www.orangefreesounds.com/you-lose-sound-effect/">You Lose sound effect</a></li>
+<li>Corona Virus Image: <a href="https://starecat.com/the-corona-virus-made-of-corona-extra-beer-bottles/">Corona Virus</a></li>
 </ul>
-<li>Dog Image: <a href="https://gallery.yopriceville.com/Free-Clipart-Pictures/Cartoons-PNG/Dog_Cartoon_PNG_Clip_Art_Image">You Lose sound effect</a></li>
-</ul>
-<li>Cat Image: <a href="https://www.vectorstock.com/royalty-free-vector/gray-cat-kitten-cute-cartoon-character-kawaii-vector-19227395">You Lose sound effect</a></li>
+<li>Sneeze Audio: <a href="https://www.fesliyanstudios.com/royalty-free-sound-effects-download/people-sneezing-191">Sneeze Audio</a></li>
 </ul>
 </li>
 
 <li><strong>High Concept:</strong>
-Catch as many cats as you can without dying.
+Infect all non-infected players.
 </li>
 
 <li><strong>Theme:</strong>
-I used the "A person with lots of cats" storymatic theme for this project as required by class.
+I used the Corona Virus as a theme for my game.
 </li>
 
 <li><strong>Mandated Variety:</strong>
-I used a lot of randomness, direct input, collector varieties for my game.
+I used a lot of randomness, direct input, and first person shooter for my game.
 </li>
 
 <li><strong>Prototype Goal:</strong>
@@ -79,15 +75,15 @@ The game mechanic this prototype evaluating is the kinesthetics of the game.
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-I want my players to experience exitment that they have to try to catch something that can also die from a dog.
+I want my players to experience excitement that they are allowed to infect other people during this pandemic. (Opposite of what they should do currently)
 </li>
 
 <li><strong>Gameplay:</strong>
-The actions that my players can perform are running and making sure that an extrapolated path of travel by a bad dog is not in the players current path while catching loose cats.
+The actions that my players can perform are sneezing on other people to infect them with the corona virus. I hope in iteration 2 to make it that other players can infect others, or also heal them to make the game harder.
 </li>
 
 <li><strong>Strategies:</strong>
-A player strategy I would expect to see is "hiding" from the dog with the structures within the game. Another stategy I could see from players would be that they would simply camp out in a structure and wait for the dog to pass rather than continuing to run around.
+A player strategy I would expect to see is shooting as fast as you can. I also see people moving about the screen as fast as they can. In iteration 2, I hope to make it so that the healthy players can heal other players so the game is harder. Currently the barriers make it hard for the game to progress.
 </li>
 
 <li><strong>Story/Setting/Premise:</strong>
@@ -95,7 +91,7 @@ A paragraph about the world your game is set in and who the characters are. What
 How will the dramatic tension interact with the gameplay tension?
 
 
-The world my game is set in is a house. I think its interesting because the premise of the game is to catch as many loose cats as possible before either the player dies, or the cats die. This game can be fun because it is really challenging to get all 10 cats. This game is meant to be a "perfectionists" game who likes a challenge because this game is hard.
+The world my game is set in is in a pre-apoctoliptic world. This world is before the corona virus has taken over and made everyone sick. This is an anti-style game because you are the one infecting others with the virus because the player thinks that he can dominate the world. Overall, currently, the game is designed to infect as many people as you can to achieve world domination.
 </li>
 
 <li><strong>Target Audience:</strong>
