--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ body
 <li><a href="HW3/index.html">Digital Assignment 3</a></li>
 <li><a href="HW4/index.html">Digital Assignment 4</a></li>
 <li><a href="HW6/index.html">Digital Assignment 5</a></li>
+<li><a href="HW7/index.html">Digital Assignment 6 (Iteration of Assignment 5)</a></li>
 </ol>
 
 <p>Here are the templates:
