HW 7 Final Commit

--- a/HW7/index.html
+++ b/HW7/index.html
@@ -22,20 +22,24 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Pandemic!</h2>
+<h2>Pandemic! (Iteration)</h2>
 
 <ul>
 <li><strong>Originality:</strong>
 The originality of my game is how I use the Corona Virus Pandemic as the feature of my game. I have not seen a game similar to this yet. The player simply infects others to dominate the world.
 </li>
 
+<li><strong>Controls:</strong>
+Use the W,A,S,D keys for moving the player. Use the mouse to point a sneeze, and click on the mouse to expend a sneeze. 
+</li>
+
 <li><strong>Technical Merit:</strong>
-What is interesting about my game technology is that I got the non-infected enimies to follow the player sprite and also bounce randomly throughout the game. I also messed around with the Random Generator function to drop in the non-infected players at random places on the map. Moreover, I also figured out how to give all of the sprites "health" so that you dont just infect everyone with a single sneeze, it takes at least three of them.
+What is interesting about my game technology is that I got the non-infected enimies to follow the player sprite and also bounce randomly throughout the game. I also added code so that in level 2 the eneimes will not only follow around the player, but will also shoot at the player. This added a good amount of complexity to my game that I have not done before. I am really proud of this game iteration with respect to the enmiemes shooting at my player. It took me a while to get the code all right to work flawlessly. 
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
 What did you learn from this prototype?
-I learned alot from this prototype. I learned how to add health or hp to sprites. I also learned how the "follow tool" works. This was really interesting in seeing how the math works. I also learned how to create a custom theme through this prototype. I dont think anything like this is currently in the game market.
+I learned alot from this prototype. I learned how to add health or hp to sprites. I also learned how to give my player health so that when a sprite shoots him, he can die and it is not just this endless loop. Another thing I thought I learned from this prototype was just how I can create one function that will control multiple sprites. In previous games, I copy and pasted code for specific sprite actions. Learning how to use the classes and features alike, I was able to shorten up my code a great deal than what it has been in past games.
 </li>
 
 <li><strong>Prototype Assets:</strong>
@@ -75,15 +79,15 @@ The game mechanic this prototype evaluating is the kinesthetics of the game.
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-I want my players to experience excitement that they are allowed to infect other people during this pandemic. (Opposite of what they should do currently)
+I want my players to experience excitement that they are allowed to infect other people during this pandemic. (Opposite of what they should do currently). I also want my players to experience virtual death. This is new to all of my games where you couldnt really die in prior prototypes.
 </li>
 
 <li><strong>Gameplay:</strong>
-The actions that my players can perform are sneezing on other people to infect them with the corona virus. I hope in iteration 2 to make it that other players can infect others, or also heal them to make the game harder.
+The actions that my players can perform are sneezing on other people to infect them with the corona virus. I hope in iteration 3 to make it that other players can infect others, or also heal them to make the game harder.
 </li>
 
 <li><strong>Strategies:</strong>
-A player strategy I would expect to see is shooting as fast as you can. I also see people moving about the screen as fast as they can. In iteration 2, I hope to make it so that the healthy players can heal other players so the game is harder. Currently the barriers make it hard for the game to progress.
+A player strategy I would expect to see is shooting as fast as you can. I also see people moving about the screen as fast as they can. I also see that players can potentially hide from other shooters in the game so that they can expend their sneezes without hurting the main player.
 </li>
 
 <li><strong>Story/Setting/Premise:</strong>
