--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ body
 <li><a href="HW4/index.html">Digital Assignment 4</a></li>
 <li><a href="HW6/index.html">Digital Assignment 5</a></li>
 <li><a href="HW7/index.html">Digital Assignment 6 (Iteration of Assignment 5)</a></li>
+<li><a href="">Digital Assignment 7 - PASS</a></li>
 </ol>
 
 <p>Here are the templates:
